# Rhythm-Open-Exchange

./: .drone.yml  .gitignore  AUDIT.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.agent/rules/: rule-derministic.md  rule-doc.md  rule-git.md  rule-history.md  rule-input.md  rule-memory-and-ressources.md  rule-naming.md  rule-observability.md  rule-testing-pyramid.md  rule-wiki.md  rust-strict-standards.md
.agent/skills/: README.md
.agent/skills/codec-development/: SKILL.md
.agent/skills/codec-development/examples/: adding_new_format.md
.agent/skills/rust-async-patterns/: SKILL.md
.agent/skills/rust-error-handling/: SKILL.md
.agent/skills/rust-ffi-bindings/: SKILL.md
.agent/skills/rust-ffi-bindings/examples/: uniffi_example.md
.agent/skills/rust-performance-optimization/: SKILL.md
.agent/workflows/: breaking-changes.md  bug-incident.md  feature-add.md  performance.md
.github/workflows/: ci.yml  publish.yml
.wiki/: Codec-API.md  Format-Converters.md  Hitsounds.md  Home.md  Metadata.md  Notes.md
assets/fnf/: test-song.json
assets/osu/: mania_4K_50K_notes.osu
assets/quaver/: 4K.qua  7K.qua
assets/stepmania/: 4k.sm
benches/: codec_bench.rs  format_bench.rs  rox_only.rs
bindings/: README.md
bindings/api/: Cargo.toml
bindings/api/src/: analysis.rs  codec.rs  lib.rs  macros.rs  memory.rs  metadata.rs  notes.rs  types.rs
bindings/csharp/: README.md  RhythmOpenExchange.csproj  RoxChart.cs
bindings/ffi/: Cargo.toml  README.md  pyproject.toml
bindings/ffi/csharp/: Rox.csproj
bindings/ffi/include/: rox_ffi.h
bindings/ffi/src/: lib.rs
bindings/python/: .gitignore  Cargo.toml  README.md
bindings/python/examples/: basic.py
bindings/python/src/: lib.rs
bindings/wasm/: .gitignore  Cargo.toml  README.md  output_7k.sm
bindings/wasm/examples/: basic.mjs
bindings/wasm/src/: lib.rs
examples/: auto_conversion.rs  compression_bench.rs  fnf_to_osu.rs  generate_large.rs  limit_test_size.rs  osu_roundtrip.rs  osu_to_rox.rs  qua_roundtrip.rs  qua_to_osu.rs  quick_check.rs  sm_roundtrip.rs  sm_to_osu.rs  sm_to_rox.rs  taiko_to_osu.rs  verify_chart.rs
output/: fnf_roundtrip.json
src/: api.rs  error.rs  lib.rs  prelude.rs  test_utils.rs
src/analysis/: bpm.rs  hash.rs  mod.rs  nps.rs  pattern.rs
src/analysis/pattern_recognition/: bpm.rs  grid.rs  merger.rs  mod.rs  timeline.rs  tree.rs  types.rs  window.rs
src/codec/: auto.rs  mod.rs  rox.rs  traits.rs
src/codec/auto/: decode.rs  encode.rs  mod.rs  types.rs
src/codec/formats/: jrox.rs  mod.rs  yrox.rs
src/codec/formats/fnf/: decoder.rs  encoder.rs  mod.rs  parser.rs  types.rs
src/codec/formats/osu/: decoder.rs  encoder.rs  mod.rs  parser.rs  types.rs
src/codec/formats/osu/parser/: mod.rs  objects.rs  sections.rs  timing.rs
src/codec/formats/qua/: decoder.rs  encoder.rs  mod.rs  parser.rs  types.rs
src/codec/formats/rox/: decoder.rs  encoder.rs  mod.rs  tests.rs
src/codec/formats/sm/: decoder.rs  encoder.rs  mod.rs  parser.rs  types.rs
src/codec/formats/taiko/: decoder.rs  mod.rs  parser.rs  types.rs
src/model/: chart.rs  hitsound.rs  metadata.rs  mod.rs  note.rs  timing.rs
tests/: auto_tests.rs  codec_tests.rs  integration_tests.rs  model_tests.rs
tests/codec/: mod.rs
tests/codec/formats/: mod.rs
tests/codec/formats/osu/: decoder_tests.rs  encoder_tests.rs  mod.rs  parser_tests.rs  roundtrip_test.rs
tests/codec/formats/sm/: decoder_tests.rs  mod.rs
tests/codec/formats/taiko/: decoder_tests.rs  layout_tests.rs  mod.rs
tests/common/: mod.rs
wiki.wiki/: Decisions.md  Format-Converters.md  Home.md  Pattern-Recognition.md  Performance-Optimizations.md  Timing-Points.md
