[package]
name = "rhythm-open-exchange"
version = "0.3.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/Glubus/rhythm-open-exchange"
keywords = ["resources", "build-time", "xml", "config"]
categories = ["config", "development-tools::build-utils"]
readme = "README.md"
description = "A try to create the ffmpeg of vsrg"

[features]
default = []
wasm = []

[dependencies]
bincode = "2.0.1"
bitflags = "2.9"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
blake3 = "1.8.2"
zstd = "0.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
sha2 = "0.10"

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "codec_bench"
harness = false

[[bench]]
name = "format_bench"
harness = false
