[package]
name = "rhythm-open-exchange"
version = "0.5.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Glubus/rhythm-open-exchange"
keywords = [
    "resources",
    "build-time",
    "xml",
    "config",
    "osu",
    "vsrg",
    "etterna",
    "mania",
    "beatmap",
]
categories = ["config", "development-tools::build-utils"]
readme = "README.md"
description = "A try to create the ffmpeg of vsrg"

[[bin]]
name = "rox-cli"
path = "src/bin/rox.rs"
required-features = ["compression", "analysis"]

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
wasm = []
compression = ["dep:zstd"]
analysis = []
all = ["compression", "analysis"]

[dependencies]
rkyv = { version = "0.8" }
bitflags = "2.9"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd = { version = "0.13", optional = true }

[dependencies.blake3]
version = "1.8.2"

[dev-dependencies]
criterion = "0.8.1"
tempfile = "3.17"

[[bench]]
name = "codec_bench"
harness = false
required-features = ["compression"]

[[bench]]
name = "format_bench"
harness = false
required-features = ["analysis"]
