[package]
name = "rox-ffi"
version = "0.5.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "rox_ffi"

[dependencies]
rhythm-open-exchange = { path = "../..", features = [
    "compression",
    "analysis",
] }
uniffi = { version = "0.29", features = ["cli"] }
uniffi-bindgen-cs = { git = "https://github.com/NordSecurity/uniffi-bindgen-cs" }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
