[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rox"
version = "0.5.0"
description = "Python bindings for Rhythm Open Exchange"
authors = [{ name = "Glubus", email = "your.email@example.com" }]
license = { file = "../../LICENSE" }
readme = "../../README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
# Le nom de la crate Rust
module-name = "rox_ffi"
# On inclut le fichier généré python dans le wheel
python-source = "python"
