[package]
name = "rox-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for Rhythm Open Exchange"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
rhythm-open-exchange = { path = "../.." }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
