[package]
name = "rox-wasm"
version = "0.4.1"
edition = "2021"
description = "WebAssembly bindings for Rhythm Open Exchange"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
rhythm-open-exchange = { path = "../.." }
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
